Add pagination and visit logging and access.
Resolves: #3, #2

--- a/test/fixtures/visits.yml
+++ b/test/fixtures/visits.yml
@@ -2,8 +2,18 @@
 
 one:
   remote_ip: "10.10.10.1"
-  request: "https://www.example.com/abc123"
+  request: "https://www.example.com/this"
+  target: "https://this.example.com"
   referrer: "www.example.com"
   user_agent: "Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:47.0) Gecko/20100101 Firefox/47.0"
-  shortcode: :one
+  shortcode: :this
+
+two:
+  remote_ip: "10.10.10.2"
+  request: "https://www.example.com/this"
+  target: "https://this.example.com"
+  referrer: "www.example.com"
+  user_agent: "Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:47.0) Gecko/20100101 Firefox/47.0"
+  shortcode: :this
+
 
